@@ -1,75 +1,78 @@
 package com.example.fincas_grupo3.application.services.usuario;
+
 import com.example.fincas_grupo3.application.dto.usuario.UsuarioRequestDTO;
 import com.example.fincas_grupo3.application.dto.usuario.UsuarioResponseDTO;
 import com.example.fincas_grupo3.application.mappers.usuario.UsuarioMapper;
 import com.example.fincas_grupo3.application.usecases.usuario.UsuarioUseCases;
 import com.example.fincas_grupo3.domain.models.usuario.Usuario;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public class UsuarioServiceImpl implements UsuarioService{
+public class UsuarioServiceImpl implements UsuarioService {
+
     private final UsuarioUseCases usuarioUseCases;
+    private final UsuarioMapper usuarioMapper;
 
-
-    public UsuarioServiceImpl(UsuarioUseCases usuarioUseCases) {
+    public UsuarioServiceImpl(UsuarioUseCases usuarioUseCases, UsuarioMapper usuarioMapper) {
         this.usuarioUseCases = usuarioUseCases;
-
+        this.usuarioMapper = usuarioMapper;
     }
 
     @Override
-    public UsuarioResponseDTO crearUsuario(UsuarioRequestDTO dto) {
-        Usuario model = UsuarioMapper.toModel(dto);
-        Usuario usuarioGuardado = usuarioUseCases.crearUsuario(model);
-        return UsuarioMapper.toDTO(usuarioGuardado);
+    public UsuarioResponseDTO crearUsuario(UsuarioRequestDTO requestDTO) {
+        Usuario usuarioModel = usuarioMapper.toModel(requestDTO);
+        Usuario usuarioGuardado = usuarioUseCases.crearUsuario(usuarioModel);
+        return usuarioMapper.toDTO(usuarioGuardado);
     }
 
     @Override
-    public UsuarioResponseDTO actualizarUsuario(UsuarioRequestDTO dto) {
-        Usuario usuarioEncontrado = usuarioUseCases.obtenerUsuarioPorId(dto.getId());
+    public UsuarioResponseDTO actualizarUsuario(UsuarioRequestDTO requestDTO) {
+        Usuario usuarioActual = usuarioUseCases.obtenerUsuarioPorId(requestDTO.getId());
+        if (usuarioActual == null) {
+            throw new EntityNotFoundException("No se encontró el usuario con el id: " + requestDTO.getId());
+        }
 
-        if(usuarioEncontrado==null) throw new IllegalArgumentException("No se encontro el usuario con el id: " + dto.getId());
+        Usuario usuarioParaActualizar = usuarioMapper.toModel(requestDTO);
+        usuarioParaActualizar.setId(usuarioActual.getId());
 
-        usuarioEncontrado.setNombre(dto.getNombre());
-        usuarioEncontrado.setApellido(dto.getApellido());
-        usuarioEncontrado.setCorreo(dto.getCorreo());
-        usuarioEncontrado.setContraseña(dto.getContraseña());
-        usuarioEncontrado.setTelefono(dto.getTelefono());
+        Usuario usuarioActualizado = usuarioUseCases.actualizarUsuario(usuarioParaActualizar);
 
-
-        Usuario usuarioGuardado = usuarioUseCases.actualizarUsuario(usuarioEncontrado);
-        return UsuarioMapper.toDTO(usuarioGuardado);
-
+        return usuarioMapper.toDTO(usuarioActualizado);
     }
 
     @Override
     public List<UsuarioResponseDTO> obtenerUsuarios() {
-        return usuarioUseCases.obtenerUsuarios().stream().map(u -> UsuarioMapper.toDTO(u)).toList();
-
-
+        List<Usuario> listaUsuarios = usuarioUseCases.obtenerUsuarios();
+        return listaUsuarios.stream()
+                .map(usuarioMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public UsuarioResponseDTO obtenerUsuarioPorId(Long id) {
-        Usuario usuarioGuardado = usuarioUseCases.obtenerUsuarioPorId(id);
-        return UsuarioMapper.toDTO(usuarioGuardado);
+        Usuario usuario = usuarioUseCases.obtenerUsuarioPorId(id);
+        if (usuario == null) {
+            throw new EntityNotFoundException("No se encontró el usuario con el id: " + id);
+        }
+        return usuarioMapper.toDTO(usuario);
     }
 
     @Override
-    public Boolean eliminarUsuario(UsuarioRequestDTO dto) {
-        Usuario model = UsuarioMapper.toModel(dto);
-      return usuarioUseCases.eliminarUsuario(model);
+    public Boolean eliminarUsuario(UsuarioRequestDTO requestDTO) {
+        Usuario model = usuarioMapper.toModel(requestDTO);
+        return usuarioUseCases.eliminarUsuario(model);
     }
 
     @Override
     public Boolean eliminarUsuarioPorId(Long id) {
-        Usuario usuarioEncontrado = usuarioUseCases.obtenerUsuarioPorId(id);
-        if (usuarioEncontrado != null) {
-           return usuarioUseCases.eliminarUsuarioPorId(id);
-
+        Usuario usuario = usuarioUseCases.obtenerUsuarioPorId(id);
+        if (usuario == null) {
+            throw new EntityNotFoundException("No se encontró el usuario con el id: " + id + " para eliminar.");
         }
-
-        return false;
+        return usuarioUseCases.eliminarUsuarioPorId(id);
     }
 }
